--- a/Raketa1/Properties/Resources.resx
+++ b/Raketa1/Properties/Resources.resx
@@ -133,6 +133,9 @@
   <data name="b" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\b.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ufo3-3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ufo3-3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ufo2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ufo2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -151,7 +154,7 @@
   <data name="prepreka" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\prepreka.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ufo3-3" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ufo3-3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="srce-1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\srce-1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
